@@ -2,9 +2,8 @@
 # Listen addresses.
 #   - '*' means all available IPv4 addresses.
 #   - '[::]' means all available IPv6 addresses.
-# Use below setting to listen on all available addresses:
-#listen = *, [::]
-listen = *
+# Listen on all available addresses by default
+listen = *, [::]
 
 #base_dir = PH_BASE_DIR
 
