@@ -144,6 +144,9 @@ CREATE TABLE IF NOT EXISTS mailbox (
     department VARCHAR(255) NOT NULL DEFAULT '',
     rank VARCHAR(255) NOT NULL DEFAULT 'normal',
     employeeid VARCHAR(255) DEFAULT '',
+    isadmin TINYINT(1) NOT NULL DEFAULT 0,
+    isglobaladmin TINYINT(1) NOT NULL DEFAULT 0,
+    language VARCHAR(5) NOT NULL DEFAULT 'en_US',
     enablesmtp TINYINT(1) NOT NULL DEFAULT 1,
     enablesmtpsecured TINYINT(1) NOT NULL DEFAULT 1,
     enablepop3 TINYINT(1) NOT NULL DEFAULT 1,
@@ -178,6 +181,7 @@ CREATE TABLE IF NOT EXISTS mailbox (
     INDEX (domain),
     INDEX (department),
     INDEX (employeeid),
+    INDEX (isadmin),
     INDEX (enablesmtp),
     INDEX (enablesmtpsecured),
     INDEX (enablepop3),
